syntax = "proto3";

package spec.proto.bff.v1;

import "google/protobuf/field_mask.proto";

option java_outer_classname = "BffApiProto";
option java_package = "spec.proto.bff.v1";

message BffApiRequest {
  // The query statement
  RequestBody body = 1;
  // The query mask
  repeated google.protobuf.FieldMask field_mask = 2;
  // The metadata for user extension.
  map<string, string> metadata = 3;
}

message RequestBody {
  // The query language
  string query = 1;
  // The query variables
  string variables = 2 ;
}

message BffApiResponse {
  // The response data
  bytes data = 1;
}
